[gd_scene load_steps=8 format=3 uid="uid://cvlskwkm5e64q"]

[ext_resource type="Script" uid="uid://b6i2lm1ly4ely" path="res://src/world/world_manager.gd" id="1_t21ax"]
[ext_resource type="Script" uid="uid://ca1u7mvaonlk0" path="res://src/world/dynamic_world.gd" id="2_gnl5f"]
[ext_resource type="Script" uid="uid://bgbp1cfk301u2" path="res://src/world/player.gd" id="3_g3vq6"]
[ext_resource type="PackedScene" uid="uid://bg4x5qkkdlr5" path="res://src/ui/debug_interface.tscn" id="4_g26pc"]
[ext_resource type="Texture2D" uid="uid://bqp85eol0g42e" path="res://assets/center_cursor.png" id="4_nbcni"]

[sub_resource type="PackedScene" id="PackedScene_7dh4k"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("test_dynamic_world", "Node", "script", "seed"),
"node_count": 1,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 2, 2, 0, 3, 1, 0),
"variants": [ExtResource("2_gnl5f"), 1756274893],
"version": 3
}

[sub_resource type="GDScript" id="GDScript_klv35"]
script/source = "extends SubViewportContainer

@export var world_manager: WorldManager
@export var viewport: Viewport

func _can_drop_data(at_position: Vector2, data: Variant) -> bool:
	return data is Vessel

func _drop_data(at_position: Vector2, data: Variant) -> void:
	if data is Vessel:
		var new_vessel = (data as Vessel).duplicate()
		world_manager.world.spawn_vessel(viewport.get_camera_2d().get_global_mouse_position(), new_vessel)
"

[node name="world_manager" type="Node2D" node_paths=PackedStringArray("_viewport", "_player")]
script = ExtResource("1_t21ax")
_debug_world_scene = SubResource("PackedScene_7dh4k")
_viewport = NodePath("viewport_container/world_viewport")
_player = NodePath("viewport_container/world_viewport/player")

[node name="viewport_container" type="SubViewportContainer" parent="." node_paths=PackedStringArray("world_manager", "viewport")]
offset_right = 1024.0
offset_bottom = 1024.0
mouse_target = true
script = SubResource("GDScript_klv35")
world_manager = NodePath("..")
viewport = NodePath("world_viewport")

[node name="world_viewport" type="SubViewport" parent="viewport_container"]
handle_input_locally = false
use_hdr_2d = true
canvas_item_default_texture_filter = 0
size = Vector2i(1024, 1024)
render_target_update_mode = 4

[node name="move_camera" type="Camera2D" parent="viewport_container/world_viewport"]
limit_smoothed = true

[node name="player" type="Node2D" parent="viewport_container/world_viewport" node_paths=PackedStringArray("zoom_camera", "move_camera", "cursor")]
script = ExtResource("3_g3vq6")
zoom_camera = NodePath("../../../zoom_camera")
move_camera = NodePath("../move_camera")
cursor = NodePath("../../../interface/cursor")

[node name="zoom_camera" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true

[node name="interface" type="CanvasLayer" parent="."]

[node name="cursor" type="TextureRect" parent="interface"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("4_nbcni")

[node name="debug_interface" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_g26pc")]
layer = 2
player = NodePath("../viewport_container/world_viewport/player")

[node name="modules_list" parent="debug_interface" index="1"]
anchors_preset = -1
tab_alignment = 1

[connection signal="vessel_entered" from="viewport_container/world_viewport/player" to="viewport_container/world_viewport/player" method="_on_vessel_entered"]
[connection signal="vessel_exited" from="viewport_container/world_viewport/player" to="viewport_container/world_viewport/player" method="_on_vessel_exited"]

[editable path="debug_interface"]
